--- a/app/views/shared/_your_page_footer_form.html.erb
+++ b/app/views/shared/_your_page_footer_form.html.erb
@@ -15,7 +15,7 @@
           </div>
         <% end %>
 
-        <%= link_to your_profile_path, class: "w-1/3 bg-orange-200 border-2 border-orange-300 hover:bg-orange-300 font-semibold text-sm block py-3" do %>
+        <%= link_to user_profile_path, class: "w-1/3 bg-orange-200 border-2 border-orange-300 hover:bg-orange-300 font-semibold text-sm block py-3" do %>
           <div class="flex flex-col">
             <span>プロフィール</span>
             <span>編集</span>
