--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -18,13 +18,13 @@
 </div>
 
 <div class="flex flex-col gap-2 pt-10 mx-auto w-80">
-  <%= link_to '#', class: "btn bg-orange-200 hover:bg-orange-300 font-semibold text-center" do %>
+  <%= link_to '#', class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
     利用規約
   <% end %>
-  <%= link_to '#', class: "btn bg-orange-200 hover:bg-orange-300 font-semibold text-center" do %>
+  <%= link_to '#', class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
     プライバシーポリシー
   <% end %>
-  <%= link_to '#', class: "btn bg-orange-200 hover:bg-orange-300 font-semibold text-center" do %>
+  <%= link_to '#', class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
     お問い合わせ
   <% end %>
 </div>
