--- a/app/views/your_profiles/show.html.erb
+++ b/app/views/your_profiles/show.html.erb
@@ -6,27 +6,15 @@
     <div class="font-bold text-2xl">プロフィール</div>
 
       <div class="flex flex-col px-3">
-        <div class="px-5">
-          <div class="text-bold text-xl">
-            アカウント名
-          </div>
-          <div class="px-10">
-            <%= current_user.name %>
+        <div class="px-5 flex container">
+          <div class="text-bold">
+            アカウント名：<%= current_user.name %>
           </div>
         </div>
       </div>
 
       <div class="flex flex-row items-start justify-end px-10">
         <%= link_to "編集", edit_user_registration_path, class: "bg-blue-500 hover:bg-blue-600 text-white w-25 py-2 rounded text-xs text-center" %>
-      </div>
-
-      <div class="flex flex-col p-3">
-        <div class="px-5">
-          <div class="text-bold text-xl">
-            メールアドレス <br />
-            パスワード
-          </div>
-        </div>
       </div>
     </div>
 
