--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -28,4 +28,5 @@
           data: { confirm: "ログアウトしますか？", turbo_confirm: "ログアウトしますか？" } %>
     </div>
   </div>
+  <%= render 'shared/your_page_footer_form' %>
 </div>
