20250804_add:turbo_stream

--- a/app/views/shared/favorites/_favorite_yes.html.erb
+++ b/app/views/shared/favorites/_favorite_yes.html.erb
@@ -1,4 +1,6 @@
-<%= link_to favorites_path(spot_id: spot.id), id: "favorite-button-for-spot-#{spot.id}", data: { turbo_method: :post } do %>
+<%= link_to favorites_path(spot_id: spot.id), 
+      id: "favorite-button-for-spot-#{spot.id}", 
+      data: { turbo_method: :post } do %>
   <div class="w-20 h-20">
     <%= image_tag "favorite/unfavorite.png", alt: "お気に入り解除ボタン", class: "w-20 h-20" %>
   </div>
