--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,11 +1,7 @@
 <div class="flex flex-col items-center pt-10">
   <div class="card w-full max-w-sm bg-orange-200 shadow-xl">
     <div class="card-body">
-      <h1 class="card-title justify-center">パスワード忘れてしまった場合</h1>
-      <h2 class="items-center size-xl">
-        🚧現在改修中🚧 <br />
-        メールは飛びません
-      </h2>
+      <h1 class="card-title justify-center py-3">パスワード再発行</h1>
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
         <%= render "users/shared/error_messages", resource: resource %>
 
@@ -14,7 +10,7 @@
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered" %>
         </div>
 
-        <div class="form-control mt-6">
+        <div class="form-control mt-8">
           <%= f.submit "送信", class: "btn btn-warning" %>
         </div>
       <% end %>
