20250806_fix:パスワード変更フォーム変更-02~

--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -19,7 +19,7 @@
           <p class="text-lg font-semibold"> ********* </p>
         </div>
         <div class="form-control mt-6">
-          <%= link_to "変更", edit_user_registration_path, class: "btn btn-warning w-full hover:bg-orange-400" %>
+          <%= link_to "パスワード変更", edit_user_registration_path, class: "btn btn-warning w-full hover:bg-orange-400" %>
         </div>
       </div>
 
