--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,25 +1,33 @@
-<h2>Change your password</h2>
+<div class="flex flex-col items-center pt-10">
+  <div class="card w-full max-w-sm bg-orange-200 shadow-xl">
+    <div class="card-body">
+      <h2 class="card-title justify-center">パスワード変更</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "users/shared/error_messages", resource: resource %>
+        <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+        <div class="form-control mb-4">
+          <%= f.label :password, "新しいパスワード", class: "label" %>
+          <% if @minimum_password_length %>
+            <em class="text-xs text-gray-600 pl-1">（<%= @minimum_password_length %>文字以上）</em>
+          <% end %>
+          <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mb-6">
+          <%= f.label :password_confirmation, "新しいパスワード（確認用）", class: "label" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered" %>
+        </div>
+
+        <div class="form-control mt-4">
+          <%= f.submit "パスワードを変更する", class: "btn btn-warning" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="pt-10">
+    <%= render "users/shared/links" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
