--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -20,7 +20,7 @@
   </div>
 
   <div class="flex flex-col gap-2 pt-10 mx-auto w-80">
-    <%= link_to '#', class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
+    <%= link_to terms_of_use_path, class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
       利用規約
     <% end %>
     <%= link_to '#', class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
