--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,8 +1,7 @@
 @import "tailwindcss";
-@plugin "daisyui";
-
 @import "./top";
 
+@plugin "daisyui";
 
 @layer components {
   /* フラッシュメッセージ */
@@ -12,5 +11,9 @@
 
   .alert-error {
     @apply p-3 mb-4 rounded border bg-red-100 text-red-800;
+  }
+
+  .spot-card {
+    @apply bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6;
   }
 }
