20250809_add:プライバシーポリシー

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -23,7 +23,7 @@
     <%= link_to terms_of_use_path, class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
       利用規約
     <% end %>
-    <%= link_to '#', class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
+    <%= link_to privacy_policy_path, class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
       プライバシーポリシー
     <% end %>
     <%= link_to '#', class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
