--- a/app/views/top/terms_of_use.html.erb
+++ b/app/views/top/terms_of_use.html.erb
@@ -223,7 +223,7 @@
 
         <section class="mb-4 text-end">
           <p>以上</p>
-          <p class="mt-6 text-left text-gray-600">最終更新日: 2025年8月7日</p>
+          <p class="mt-4 text-right text-gray-600">最終更新日: 2025年8月8日</p>
         </section>
       </div>
     </div>
