20250809_add:プライバシーポリシー-02

--- a/app/views/top/privacy_policy.html.erb
+++ b/app/views/top/privacy_policy.html.erb
@@ -72,10 +72,11 @@
           <p class="mb-2">当社は、アクセス解析のために「Googleアナリティクス」を利用しています。GoogleアナリティクスはCookieを使用し、匿名のトラフィックデータを収集します。個人を特定するものではありません。</p>
           <p class="mb-2">Cookieを無効にすることで、情報の収集を拒否することが可能です。詳しくは、お使いのブラウザの設定をご確認ください。</p>
           <p class="mb-2">
-          Googleアナリティクスの詳細については、以下をご参照ください：<br>
-          <a href="https://marketingplatform.google.com/about/analytics/terms/jp/" class="link link-primary" target="_blank">
-            https://marketingplatform.google.com/about/analytics/terms/jp/
-          </a>
+          Googleアナリティクスの詳細については、
+            <a href="https://marketingplatform.google.com/about/analytics/terms/jp/" class="link link-primary">
+              こちら
+            </a>
+          をご参照ください。
           </p>
         </section>
 
