20250808:add_お問い合わせフォーム

--- a/app/views/top/privacy_policy.html.erb
+++ b/app/views/top/privacy_policy.html.erb
@@ -94,7 +94,7 @@
             7. お問い合わせ
           </h2>
           <p>お客様の情報の開示、訂正、利用停止、削除をご希望される場合は、
-            <%= link_to "お問い合わせフォーム", "https://forms.gle/Dm14tq7CAMnFTcBy6", class: "text-blue-500 underline" %>
+            <%= link_to "お問い合わせフォーム", contact_form_path, class: "text-blue-500 underline" %>
           よりご連絡ください。</p>
         </section>
 
