--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -26,7 +26,7 @@
     <%= link_to privacy_policy_path, class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
       プライバシーポリシー
     <% end %>
-    <%= link_to '#', class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
+    <%= link_to contact_form_path, class: "w-full py-2 px-4 rounded bg-yellow-400 hover:bg-orange-400 font-semibold text-center transition" do %>
       お問い合わせ
     <% end %>
   </div>
