--- a/app/views/top/privacy_policy.html.erb
+++ b/app/views/top/privacy_policy.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4">
+<div class="">
   <div class="px-3 w-full rounded-lg mb-8">
     <div class="spot-card">
       <header class="mb-8">
