--- a/app/views/your_spots/index.html.erb
+++ b/app/views/your_spots/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4 pb-16">
+<div class="pb-16">
   <div class="max-w-5xl mx-auto">
     <%= render 'shared/flash_message'%>
 
