--- a/app/views/your_spots/_spot_info.html.erb
+++ b/app/views/your_spots/_spot_info.html.erb
@@ -28,7 +28,15 @@
               </div>
 
               <% if mode == "index" %>
-
+                <!-- ボタン -->
+                <div class="flex flex-col items-center justify-center space-y-2">
+                  <%= link_to "編集", edit_your_spot_path(spot), 
+                                      class: "bg-blue-500 hover:bg-blue-600 text-white px-4 py-1 rounded text-xs text-center" %>
+                  <%= button_to "削除", your_spot_path(spot), 
+                                        method: :delete, 
+                                        data: { confirm: "本当に削除しますか？" }, 
+                                        class: "bg-red-500 hover:bg-red-600 text-white px-4 py-1 rounded text-xs text-center" %>
+                </div>
 
               <% elsif mode == "favorites" %>
                 <div class="flex flex-col items-center justify-center space-y-2">
