--- a/app/views/your_spots/favorites.html.erb
+++ b/app/views/your_spots/favorites.html.erb
@@ -5,7 +5,7 @@
     <!-- 全体の黄色背景ボックス -->
     <div class="bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6">
 
-      <%= render partial: 'spot_info', locals: { mode: "favorites" } %>
+      <%= render partial: 'shared/spot_info', locals: { mode: "favorites" } %>
 
     </div>
   </div>
