--- a/app/views/shared/_spot_form.html.erb
+++ b/app/views/shared/_spot_form.html.erb
@@ -28,7 +28,7 @@
     <p class="font-medium text-gray-700 mb-2">タグ選択（未実装）</p>
     <div class="flex gap-2 flex-wrap">
       <% season_tags.each do |tag| %>
-        <span class="px-4 py-1 bg-gray-200 rounded-full text-gray-600 cursor-not-allowed"><%= tag %></span>
+        <span class="btn btn-warning"><%= tag.season %></span>
       <% end %>
     </div>
   </div>
