--- a/app/views/super_admin/shared/_header.html.erb
+++ b/app/views/super_admin/shared/_header.html.erb
@@ -1,3 +1,3 @@
-<footer>
-  <p class='mt-3 text-muted'>SuperAdmin_isamin</p>
-</footer>
+<header>
+  <p class='text-muted'>SaitaManear 管理者画面</p>
+</header>
