20250820_add:SuperAdmin_userページ作成

--- a/app/views/super_admin/layouts/application.html.erb
+++ b/app/views/super_admin/layouts/application.html.erb
@@ -19,6 +19,7 @@
         <%= render 'super_admin/shared/sidebar' %>
       </aside>
       <main class="flex-1 px-6 py-4">
+        <%= render 'shared/flash_message' %>
         <%= yield %>
       </main>
     </div>
