--- a/app/views/super_admin/shared/_sidebar.html.erb
+++ b/app/views/super_admin/shared/_sidebar.html.erb
@@ -1,13 +1,9 @@
 <ul class="menu p-4 w-64 min-h-full bg-base-200 text-base-content">
   <li>
-    <%= link_to '#' do %>
-      <%= "user 👤" %>
-    <% end %>
+    <%= link_to 'users 👤', super_admin_users_path %>
   </li>
   <li>
-    <%= link_to '#' do %>
-      <%= "posts 💬" %>
-    <% end %>
+    <%= link_to 'posts 💬','#' %>
   </li>
 </ul>
 
