20250823_add:SuperAdmin_Spotsページindex作成

--- a/app/views/super_admin/shared/_sidebar.html.erb
+++ b/app/views/super_admin/shared/_sidebar.html.erb
@@ -3,7 +3,7 @@
     <%= link_to 'users 👤', super_admin_users_path %>
   </li>
   <li>
-    <%= link_to 'posts 💬','#' %>
+    <%= link_to 'posts 💬', super_admin_spots_path %>
   </li>
 </ul>
 
