--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -2,9 +2,11 @@
 
   <!-- オレンジ色のカード風ボックス -->
   <div class="spot-card bg-orange-200 rounded-lg border border-orange-700 p-4 space-y-6">
-    <h1 class="text-2xl font-bold mb-6">スポット投稿</h1>
     <!-- 部分テンプレートを呼び出してフォームを表示 -->
-    <%= render 'shared/spot_form', spot: @spot , season_tags: @season_tags %>
+
+    <!-- -->
+    <%= render 'shared/spot_form', spot: @spot %>
+    <%#= render 'shared/spot_form', spot: @spot , season_tags: @season_tags %>
   </div>
 </div>
 
