--- a/app/views/super_admin/spots/index.html.erb
+++ b/app/views/super_admin/spots/index.html.erb
@@ -19,6 +19,10 @@
             <td class="px-4 py-2 border-b border-lime-200"><%= spot.address %></td>
             <td class="px-4 py-2 border-b border-lime-200 text-center">
               <div class="flex items-center justify-center space-x-2">
+                <%# 詳細ボタン %>
+                <%= link_to "詳細", super_admin_spot_path(spot),
+                      class: "bg-lime-500 hover:bg-lime-600 text-white px-3 py-1 rounded text-xs" %>
+
                 <%# 編集ボタン %>
                 <%= link_to "編集", edit_super_admin_spot_path(spot),
                       class: "bg-blue-500 hover:bg-blue-600 text-white px-3 py-1 rounded text-xs" %>
